(next release) on (date of next release)
06.07.00 VZ: almost complete rewrite of (user visible aspects of) filter code,
             there are now several dialogs for filter editing
05.07.00 VZ: made sending a test message during installation optional
04.07.00 VZ: added "reverse order" checkboxes to sort dialog, made possible to
             reverse sort by arrival order
04.07.00 KB: wxOptionsDlg now automatically stores all Field_Password entries
	     encrypted, SMTP/NNTP server passwords are now encrypted in config
             keep-open flag now only enforced for Outbox
30.06.00 VZ: made it possible to attach several files at once
27.06.00 KB: added DeleteDuplicates functionality, fixed (?) folderview selection behaviour
             for auto-show-first and move focus on after delete/undelete/etc
19.06.00 VZ: messages from oneself are (optionally) marked as such
15.06.00 VZ: added "Message|Language" menu for manual language selection
14.06.00 KB: MailCollector no longer keeps all incoming folders open to save
             resources on servers and make collection more reliable.
             Folders are now kept around after last DecRef() for a configurable
             delay to speed up re-opening.
14.06.00 VZ: RFC 2047 compliant header parsing for the non ASCII strings in
             headers and displaying them using appropriate fonts
             The folder view is immediately updated after options change.
14.06.00 VZ: viewing messages in non-default charsets
11.06.00 KB: Filter rules editor shows program code and should check for
             consistency. Manual editing supported.
             Install Wizard fixes, better default values for servers. No more
             network autodetection for Unix.
10.06.00 VZ: dialog for editing the order of folder view columns
             sorting of folder view by any column on column click
10.06.00 KB: Finished OpenSSL dynamic loading
             Fixed next-unread-menu and some translations/keybindings